{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 23,
  "lineage": "6491106d-e674-8e43-1934-3a3e865770c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dbd69f16ff0a417",
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-05dbd69f16ff0a417",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-211-187-214.us-west-2.compute.amazonaws.com",
            "public_ip": "34.211.187.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "tags_all": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:internet-gateway/igw-05dd3f5ca8e86d00c",
            "id": "igw-05dd3f5ca8e86d00c",
            "owner_id": "559220132560",
            "tags": {
              "Name": "Development-IGW"
            },
            "tags_all": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dbd69f16ff0a417",
            "connectivity_type": "public",
            "id": "nat-01ce263f531290673",
            "network_interface_id": "eni-0d9d8563fc914be27",
            "private_ip": "10.0.1.55",
            "public_ip": "34.211.187.214",
            "subnet_id": "subnet-094a4c551aca07258",
            "tags": {
              "Name": "Development-NATGW"
            },
            "tags_all": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09834c7a28b0d0c301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ce263f531290673",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09834c7a28b0d0c30",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05dd3f5ca8e86d00c",
            "id": "r-rtb-0e35b023848cdd6571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e35b023848cdd657",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:route-table/rtb-09834c7a28b0d0c30",
            "id": "rtb-09834c7a28b0d0c30",
            "owner_id": "559220132560",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Private-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:route-table/rtb-0e35b023848cdd657",
            "id": "rtb-0e35b023848cdd657",
            "owner_id": "559220132560",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0770f1105aacec67b",
            "route_table_id": "rtb-09834c7a28b0d0c30",
            "subnet_id": "subnet-0d6ba3c7d1f2cdacd"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dd775077f6b314c",
            "route_table_id": "rtb-09834c7a28b0d0c30",
            "subnet_id": "subnet-0181db8be95121718"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0777ed33ddb72d51c",
            "route_table_id": "rtb-09834c7a28b0d0c30",
            "subnet_id": "subnet-058d21edee3ccfdda"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be47352e36bf939b",
            "route_table_id": "rtb-0e35b023848cdd657",
            "subnet_id": "subnet-094a4c551aca07258"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba541eb066dc3a9f",
            "route_table_id": "rtb-0e35b023848cdd657",
            "subnet_id": "subnet-096e967aaf2404997"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0023b89065ee8a54c",
            "route_table_id": "rtb-0e35b023848cdd657",
            "subnet_id": "subnet-0bc33d7594c53559e"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:security-group/sg-0eb6582a3d21c6534",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb6582a3d21c6534",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": "",
            "owner_id": "559220132560",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:subnet/subnet-0d6ba3c7d1f2cdacd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6ba3c7d1f2cdacd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559220132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:subnet/subnet-0181db8be95121718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0181db8be95121718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559220132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:subnet/subnet-058d21edee3ccfdda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058d21edee3ccfdda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559220132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:subnet/subnet-094a4c551aca07258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094a4c551aca07258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559220132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:subnet/subnet-096e967aaf2404997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096e967aaf2404997",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559220132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:subnet/subnet-0bc33d7594c53559e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc33d7594c53559e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559220132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-0c9922915b65e618d"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559220132560:vpc/vpc-0c9922915b65e618d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad7dfb948b51bead",
            "default_route_table_id": "rtb-02e5b93613cb34d1f",
            "default_security_group_id": "sg-008ed0d4199c81842",
            "dhcp_options_id": "dopt-073316614d686e934",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9922915b65e618d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e5b93613cb34d1f",
            "owner_id": "559220132560",
            "tags": {
              "Name": "Development-VPC"
            },
            "tags_all": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}